bat file changed

--- a/html/index.html
+++ b/html/index.html
@@ -106,6 +106,13 @@
 						<input type="button" id="script1" name="scriptbutton" value="Run Exercise 6" onclick="window.location.href='EN/ex6.html'">
 						</p>
 					</li>
+
+					<li>
+						<dt>Chapter 7 </dt>	<br>Interference <br>
+						<p style "{ margin-left: 40px; }">
+						<input type="button" id="script1" name="scriptbutton" value="Run Exercise 7" onclick="window.location.href='EN/ex7.html'">
+						</p>
+					</li>
 				</ul>
 			</article>
 			<footer>
